Create Add and Remove Issue from project.

--- a/Redmine.ManagerWPF/Redmine.ManagerWPF.Desktop.csproj
+++ b/Redmine.ManagerWPF/Redmine.ManagerWPF.Desktop.csproj
@@ -32,6 +32,9 @@
     <Compile Update="Views\ContentDialogs\DailyRaport.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\ContentDialogs\AddIssueToProject.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Views\ContentDialogs\SynchronizeIssues.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -39,6 +42,10 @@
 
   <ItemGroup>
     <Page Update="Views\ContentDialogs\DailyRaport.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Views\ContentDialogs\AddIssueToProject.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
