Add logger to application. Fix daily raport. Replace MessageBox by ModernWpf MessageBox. Force Light App theme. Add logs in any catch clause.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/.idea/.idea.Redmine.ManagerWPF/.idea/vcs.xml
+/.idea/.idea.Redmine.ManagerWPF/.idea/indexLayout.xml
+/.idea/.idea.Redmine.ManagerWPF/.idea/encodings.xml
+/.idea/.idea.Redmine.ManagerWPF/.idea/.gitignore
+/.idea/.idea.Redmine.ManagerWPF/.idea
