Add Break Reason Dialog after unlock computer, if break was longer than 5 minutes to write break reason (or just click break button).

--- a/Redmine.ManagerWPF/Redmine.ManagerWPF.Desktop.csproj
+++ b/Redmine.ManagerWPF/Redmine.ManagerWPF.Desktop.csproj
@@ -84,6 +84,9 @@
     <Compile Update="Views\ContentDialogs\SynchronizeIssues.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\ContentDialogs\BreakReason.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -119,6 +122,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Update="Views\ContentDialogs\SynchronizeIssues.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Views\ContentDialogs\BreakReason.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
